crates/htui/src/ui/overlay/snapshots/htui__ui__overlay__queue__tests__header_demo.snap
---
source: crates/htui/src/ui/overlay/queue.rs
expression: rendered
---











          ┌ Queue ────────────────────────────────────────────────────────────────────────┐
          │  queue: running · demo: nothing is admitted                                   │
          │                                                                               │
          │> A-1  t  next to run                                                          │
          │  B-2  t  next to run                                                          │
          │  C-3  t  next to run                                                          │
          │                                                                               │
          │  j/k move · J/K reorder · P pause/resume · Q dequeue · Enter open · Esc close │
          └───────────────────────────────────────────────────────────────────────────────┘
