crates/htui/src/ui/overlay/snapshots/htui__ui__overlay__queue__tests__narrow.snap
---
source: crates/htui/src/ui/overlay/queue.rs
expression: rendered
---






  ┌ Queue ───────────────────────────────────────────────┐
  │  queue: running · batch since 14:02 · $1.20 spent ·… │
  │                                                      │
  │> FIX-1  a short title                   next to run  │
  │  FIX-2  the judge has to pick a branch  judge undec… │
  │                                                      │
  │  j/k move · J/K reorder · P pause/resume · Q dequeu… │
  └──────────────────────────────────────────────────────┘
