crates/htui/src/ui/overlay/snapshots/htui__ui__overlay__queue__tests__reading.snap
---
source: crates/htui/src/ui/overlay/queue.rs
expression: rendered
---













          ┌ Queue ────────────────────────────────────────────────────────────────────────┐
          │  reading the queue                                                            │
          │                                                                               │
          │  j/k move · J/K reorder · P pause/resume · Q dequeue · Enter open · Esc close │
          └───────────────────────────────────────────────────────────────────────────────┘
